:art: Format code