@@ -1,14 +1,13 @@
 plugins {
     kotlin("jvm")
     id("org.jetbrains.compose")
-    id("org.jlleitschuh.gradle.ktlint")
 }
 
 dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     implementation(project(":compose-jetbrains-expui-theme"))
-    implementation(compose.desktop.currentOs) {
-        // exclude("org.jetbrains.compose.material")
+    implementation(compose.desktop.linux_x64) {
+        exclude("org.jetbrains.compose.material")
     }
     implementation(compose.uiTooling)
 }
@@ -17,13 +16,17 @@ compose.desktop {
     application {
         mainClass = "MainKt"
         nativeDistributions {
-            packageName = "Mediator"
+            packageName = "JetBrains ExpUI Gallery"
             packageVersion = project.version.toString()
             copyright = "Beijing Muke Technology Co., Ltd."
+            modules("jdk.unsupported", "jdk.accessibility")
 
-            macOS {
-                // jvmArgs("--add-exports", "java.desktop/com.apple.eawt=ALL-UNNAMED")
-            }
+            targetFormats(
+                org.jetbrains.compose.desktop.application.dsl.TargetFormat.AppImage,
+                org.jetbrains.compose.desktop.application.dsl.TargetFormat.Dmg,
+                org.jetbrains.compose.desktop.application.dsl.TargetFormat.Deb,
+                org.jetbrains.compose.desktop.application.dsl.TargetFormat.Msi
+            )
         }
     }
 }
